fix focus border overlapping bug

--- a/assets/styles/components/card.css
+++ b/assets/styles/components/card.css
@@ -131,11 +131,11 @@
 }
 @media (min-width: 768px) {
 	.card {
-		flex-basis: calc(50% - 4px);
+		flex-basis: calc(50% - 8px);
 	}
 }
 @media (min-width: 1280px) {
 	.card {
-		flex-basis: calc(33.33% - 5.3px);
+		flex-basis: calc(33.33% - 10.7px);
 	}
 }
