--- a/assets/styles/components/form.css
+++ b/assets/styles/components/form.css
@@ -1,11 +1,10 @@
 .new-question {
 	flex-basis: 100%;
 	border-radius: 12px;
-	padding: 24px 24px 0;
 	border: 1px solid var(--color-border);
 }
 .new-question__header-section {
-	margin-bottom: 24px;
+	padding: 24px;
 }
 .new-question__title {
 	font-weight: 500;
@@ -22,7 +21,7 @@
 .new-question__fieldset {
 	border: none;
 	display: flex;
-	padding-bottom: 24px;
+	padding: 0 24px 24px;
 	flex-direction: column;
 }
 .new-question__legend {
@@ -97,10 +96,11 @@
 .new-question__footer {
 	gap: 16px;
 	bottom: 0;
+	padding: 24px;
 	display: flex;
-	padding: 24px 0;
 	position: static;
 	justify-content: flex-end;
+	border-radius: 0 0 12px 12px;
 	background-color: var(--color-white);
 	border-top: 1px solid var(--color-border);
 }
@@ -152,7 +152,7 @@
 }
 @media (min-width: 768px) {
 	.new-question {
-		flex-basis: calc(50% - 4px);
+		flex-basis: calc(50% - 8px);
 	}
 	.new-question__footer {
 		position: sticky;
