--- a/assets/styles/components/profile.css
+++ b/assets/styles/components/profile.css
@@ -58,6 +58,6 @@
 }
 @media (min-width: 1280px) {
 	.profile {
-		flex-basis: calc(33.33% - 5.3px);
+		flex-basis: calc(33.33% - 10.7px);
 	}
 }
